# ShotgunUnifrac

./: .gitignore  Dockerfile  GCF_000196555.1_ASM19655v1_cds_from_genomic.fasta  RAxML_bestTree.rooted  RAxML_info.rooted  RAxML_log.rooted  RAxML_parsimonyTree.rooted  RAxML_result.rooted  README.md  Snakefile  Snakefile_overscoped  config.yml  download-genes.sh  download-txids.sh  downloadGenes.py  environment.yml  filterGenes.py  renovate.json  run.py  run_assembly.txt
.github/: pull_request_template.md
.github/workflows/: docker.yml  linter.yml  main.yml  test.yml
.tests/: config.yml  run_assembly.txt
.tests/data/: TEST
.tests/integration/: common.py  test_full_nucl_run.py  test_full_run.py  test_full_run_snakemake.py  test_full_supermatrix_run.py  test_get_ncbi_sequences.py  test_singularity.py
.tests/unit/: common.py  (+9 more)
CorGE/: README.md  setup.py
config/: config.yml
docs/: CorGE.rst  conf.py  index.rst  quickstart.rst
example-trees/: nucl100_RAxML_consensusOutgroupTree.final  nucl_supermat100_RAxML_outgroupRootedTree.final  prot100_RAxML_supermatrixOutgroupTree.final
workflow/: Snakefile  benchmark_trees.py
workflow/scripts/: README.md  create_supermatrix.py  downloadGenes.py  filterGenes.py  msa.py  reduce_alignments.py  reduce_alignments_stats.py  setup.cfg  setup.py
workflow/scripts/example-data/: big_genes_list.txt  genes_list.txt
workflow/scripts/src/genetools/: command.py  downloadGenes.py  filterGenes.py  mergeGenes.py
workflow/scripts/tests/: test_download_genes.py  test_filter_genes.py  test_main.py  test_merge_genes.py
(+89 files in other folders)
