[metadata]
name = genetools
version = 0.0.1
author = Charlie Bushman
author_email = ctbushman@gmail.com
description = Download representative/reference genomes from NCBI RefSeq database then filter and compile specific genes from them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ulthran/ShotgunUnifrac/tree/master/workflow/scripts
project_urls =
    Bug Tracker = https://github.com/Ulthran/ShotgunUnifrac/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src